# fingertip-recognition

./: README.md
c_cpp/: CMakeLists.txt  face_dect.cpp  face_dect.h  test.c
decode/: CMakeLists.txt  main.cpp
finger_tip/: CMakeLists.txt  aa.c  test.c  tip_point.cpp  tip_point.h
hand_pos/: test.c
hand_pos/key_point/: key_point.cpp  key_point.h
hand_pos/photos/: resize.m
